Overflow fix

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,8 +1,9 @@
 html, body, #root {
-    height: 100vh;
+    height: 100%;
     margin: 0;
     padding: 0;
     position: relative;
+    overflow: hidden;
   }
 
 /* Common Variables */
@@ -212,11 +213,14 @@ html, body, #root {
         padding-right: 5%;
         align-items: center;
         border-top: 1px solid white;
-        padding-top: 10px;
+        padding-top: 0;
+        padding-bottom: 0;
         padding-bottom: 10px;
+        margin-bottom: 1.5rem;
     }   
 
     .footer {
+        padding-top: 0;
         scrollbar-width: none; /* Firefox */
         -ms-overflow-style: none; /* Internet Explorer 10+ */
     }
